<resources>
    <string name="app_name">Leaf Doctor</string>
    <string name="app_title">Leaf Disease Detection App</string>
    <string name="choose_lang">Choose Your Language</string>
    <string name="english_button">ENGLISH</string>
    <string name="hindi_button">हिंदी</string>
    <string name="kannada_button">ಕನ್ನಡ</string>
    <string name="pests_disease">Pests and Disease</string>
    <string name="pests_overview">Check pests affecting different plants</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="fertilizer_overview">Check type of fertilizers to add</string>
    <string name="cultivation">Cultivation Tips</string>
    <string name="cultivation_overview">Check cultivation tips for different crops</string>
    <string name="link">Raita Mitra</string>
    <string name="link_overview">Department of Agriculture(KSDA)</string>
    <string name="camera">Take a picture</string>
    <string name="camera_overview">Capture leaf picture to detect disease</string>
    <string name="upload">Select a picture</string>
    <string name="upload_overview">Upload leaf picture from your device</string>
    <string name="seeding_stage">During Seedling Stage</string>
    <string name="vegetative_stage">During Vegetative Stage</string>
    <string name="flowering_stage">During Flowering Stage</string>
    <string name="fruiting_stage">During Fruiting Stage</string>
    <string name="harvesting_stage">During Harvesting Stage</string>
    <string name="tomatoadvise">  ▶To start, plant the tomato seeds indoors in small pots 3 to 4 inch deep or seed starting trays about ¼ inches deep in moderately fertile soil.\n\n
▶The soil pH ranging from 6.0 to 6.8 is best for tomatoes. Tomatoes will grow in almost any type of garden soil except for heavy clay soil.\n\n
▶The ideal temperature required for germination of tomatoes seeds ranges between  21 to 27℃ (70 to 80℉). For best germination results, keep the pots in a warm and dark place. The seedlings should appear in 10 to 14 days.\n\n
▶The secret to growing healthy tomatoes at home is in the soil. Maintaining optimum soil moisture is essential for successful tomato growth.\n\n
▶Seeds require very little watering till germination. Use a spray bottle to mist the seedlings to keep the top of the soil moist. In case you feel the soil has become too moist, just place the potted plant to an area with increased airflow.

    </string>
    <string name="tomatoabout"> Tomato, (Solanum lycopersicum), flowering plant of the nightshade family (Solanaceae), cultivated extensively for its edible fruits. Labelled as a vegetable for nutritional purposes, tomatoes are a good source of vitamin C and the phytochemical lycopene. The fruits are commonly eaten raw in salads, served as a cooked vegetable, used as an ingredient of various prepared dishes, and pickled. Additionally, a large percentage of the world’s tomato crop is used for processing; products include canned tomatoes, tomato juice, ketchup, puree, paste, and “sun-dried” tomatoes or dehydrated pulp.\n\n
    Tomato plants are generally much branched, spreading 60–180 cm (24–72 inches) and somewhat trailing when fruiting, but a few forms are compact and upright. Leaves are more or less hairy, strongly odorous, pinnately compound, and up to 45 cm (18 inches) long. The five-petaled flowers are yellow, 2 cm (0.8 inch) across, pendant, and clustered. Fruits are berries that vary in diameter from 1.5 to 7.5 cm (0.6 to 3 inches) or more. They are usually red, scarlet, or yellow, though green and purple varieties do exist, and they vary in shape from almost spherical to oval and elongate to pear-shaped. Each fruit contains at least two cells of small seeds surrounded by jellylike pulp.
    </string>
    <string name="potatoabout">Potato, (Solanum tuberosum),
        annual plant in the nightshade family (Solanaceae),
        grown for its starchy edible tubers.
        The potato is native to the Peruvian-Bolivian Andes and is one of the world’s main food crops. Potatoes are frequently served whole or mashed as a cooked vegetable and are also ground into potato flour, used in baking and as a thickener for sauces. The tubers are highly digestible and supply vitamin C, protein, thiamin, and niacin.
   \n\n
        The potato is one of some 150 tuber-bearing species of the genus Solanum (a tuber is the swollen end of an underground stem). The compound leaves are spirally arranged; each leaf is 20–30 cm (about 8–12 inches) long and consists of a terminal leaflet and two to four pairs of leaflets. The white, lavender, or purple flowers have five fused petals and yellow stamens. The fruit is a small poisonous berry with numerous seeds.
    </string>
    <string name="potatoadvise">•Potatoes grow best in cool, well-drained, loose soil that is about 45° to 55°F (7° to 13°C).\n\n
•Choose a location that gets full sun—at least 6 hours of sunlight each day.\n\n
•Grow potatoes in rows spaced about 3 feet apart.\n\n
•With a hoe or round-point shovel, dig a trench about 6 inches wide and 8 inches deep, tapering the bottom to about 3 inches wide.\n\n
•Spread and mix in fully-rotted manure or organic compost in the bottom of the trench before planting.\n\n•In each trench, place a seed potato piece (cut side down) every 12 to 14 inches and cover with 3 to 4 inches of soil.\n\n
•If your garden soil is very rocky, put the seed potato pieces directly on the ground. Sprinkle with a mix of soil and compost. Cover them with straw or leaves, hilling the material up as the potatoes grow.\n\n
•The best starters are seed potatoes. Do not confuse seed potatoes with potato seeds or grocery produce! Select seed potatoes which have protruding eyes (buds).\n\n
•Use a clean, sharp paring knife to cut large potatoes into pieces that are roughly the size of a golf ball, making sure that there are at least 2 eyes on each piece. (Potatoes that are smaller than a hen’s egg should be planted whole.)\n\n
•If you are cutting up potato pieces yourself, do so 1 to 2 days ahead of planting. This will give them the chance to “heal” and form a protective layer over the cut surface, improving both moisture retention and rot resistance.\n\n
•12 to 16 days after planting, when sprouts appear, use a hoe to gently fill in the trench with another 3 to 4 inches of soil, leaving a few inches of the plants exposed. Repeat in several weeks, leaving the soil mounded up 4 to 5 inches above ground level \n\n
•After the potato plants have emerged, add organic mulch between the rows to conserve moisture, help with weed control, and cool the soil.
    </string>
    <string name="disease_found_in">Disease can be found in</string>
    <string name="check_symptoms">Check if these symptoms appear on your crop</string>
    <string name="biological_treatment">Biological Treatment</string>
    <string name="chemical_treatment">Chemical Treatment</string>
    <string name="what_caused_it">What caused it?</string>
    <string name="early_blight_infected">Tomato, Brinjal, Capsicum and Chilli, Potato</string>
    <string name="early_blight_symptoms">▶ Dark spots with concentric growth and yellow halos on leaves.\n\n▶ Leaves dry out and fall off.\n\n▶ Fruits may start to rot and eventually drop.</string>
    <string name="early_blight_cause">Symptoms are caused by Alternaria solani, a fungus that overwinters on infected crop debris in soil or on
alternative hosts. Purchased seeds or seedlings may also be already contaminated. Lower leaves often
get infected when in contact with contaminated soil. Warm temperatures (24-29°C) and high humidity
(90%) favor development of the disease. A long wet period (or alternating wet/dry weather) enhances
the production of spores, which may be spread via wind, splashing rain or overhead irrigation. Tubers
harvested green or in wet conditions are particularly susceptible to an infection. It often strikes after a
period of heavy rainfall and is particularly destructive in tropical and subtropical areas.</string>
    <string name="common_rust_biological_treatment">No biological treatment is available as of now. Apply chemical treatment if this disease is found.</string>
    <string name="common_rust_chemical_treatment">The disease is caused by the fungus Puccinia sorghi. The fungus overwinters in an alternate host (a species of Oxalis) and releases spores during the spring. The spores can be transported over great distances by winds and rain. They start the infection process when landing on the leaves. Secondary infection from plant to plant can also occur due to wind and rain. The development of the disease is favored by high relative humidities (nearly 100%), dew, rain and cool temperatures between 15 and 200C (may vary depending on area). Hot, dry weather will in turn slow or hinder the development of the fungus and the incidence of the disease. It is more a problem in plants used for seed production and sweet corn. Plants cultivated as livestock feed, for industrial products, or to make processed foods are not concerned. Yield is reduced due to lower plant productivity and lodging.</string>
    <string name="price">Price per Kg</string>
    <string name="nutrients_contain">What nutrients does it contain?</string>
    <string name="how_it_helps">How does it help in crop nutrition?</string>
    <string name="how_it_benefits">How does it benefit farmers?</string>
    <string name="crops_used">What are the crops in which farmers could use it?</string>
    <string name="nitro_price">₹ 20-22</string>
    <string name="nitro_nutrients_contain">Nitrogen and Phosphorus</string>
    <string name="nitro_how_it_helps">▶ Contains Nitrogen in both Nitrate and Ammoniacal forms. Hence, prolonged availability of Nitrogen to the crop
\n\n▶ High Water Soluble Phosphate helps in faster root development
\n\n▶ Improves root and shoot development
\n\n▶ Acidic in nature. Improves pH of soil, especially in alkaline areas</string>
    <string name="nitro_how_it_benefits">▶ Prilled Fertiliser, hence adulteration impossible
\n\n▶ Makes crops capable of withstanding/escaping drought
\n\n▶ Crops remain green for a longer time
\n\n▶ Higher crop yields and improved quality of crop produce</string>
    <string name="nitro_crops_used">All cereals, pulses, oil seeds, fruits and vegetable crops</string>
</resources>