<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/nitrophosphate"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/price"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/nitro_price"
                android:textStyle="normal"
                android:textColor="#656464"
                android:textSize="15sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C5C2C2"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/nutrients_contain"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/symptom1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/nitro_nutrients_contain"
                android:textStyle="normal"
                android:textColor="#656464"
                android:textSize="15sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C5C2C2"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/how_it_helps"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:text="@string/nitro_how_it_helps"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C5C2C2"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/how_it_benefits"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="15dp"
                android:textStyle="normal"
                android:text="@string/nitro_how_it_benefits"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C5C2C2"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/crops_used"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="15dp"
                android:textStyle="normal"
                android:text="@string/nitro_crops_used"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>